tests/fixtures/positive/resource-cost/RecyclerAdapterStableIdsDefault.kt
package fixtures.positive.resourcecost

import androidx.recyclerview.widget.RecyclerView

class StableAdapter : RecyclerView.Adapter<RecyclerView.ViewHolder>() {
    override fun onCreateViewHolder(parent: android.view.ViewGroup, viewType: Int): RecyclerView.ViewHolder {
        TODO()
    }

    override fun onBindViewHolder(holder: RecyclerView.ViewHolder, position: Int) {
        TODO()
    }

    override fun getItemCount(): Int = 0
}
